--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Github Boost",
-  "description": "<description in manifest.json>",
+  "description": "Enhance your GitHub developer experience when reviewing PRs",
   "options_ui": {
     "page": "src/pages/options/index.html"
   },
